examples/test/testpolicy18694.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18694
  namespace: namespace97
spec:
  podSelector:
    matchLabels:
      key4: value44
      key33: value36
      key12: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value43
      podSelector:
        matchLabels:
          key20: value6
          key5: value47
          key38: value36
